[package]
name = "bevy_spicy_networking_tokio_quinn"
version = "0.1.0"
edition = "2021"
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = [], default-features = false }
bevy_spicy_networking = {path = "../bevy_spicy_networking"}
bincode = "1.3.3"
tokio = {version = "1.15.0", features = ["net"]}
quinn = "0.8.0"
futures-util = "0.3.19"
futures = "0.3.19"


[dev-dependencies]
bevy = { version = "0.6" }
bevy_spicy_networking = {path = "../bevy_spicy_networking"}
rustls = { version = "*", features = ["dangerous_configuration", "quic"] }
typetag = "0.1.7"
serde = { version = "1.0.133", features = ["derive"] }
rcgen = "0.8"

[[example]]
name = "client"

[[example]]
name = "server"